--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+  font-family: "Orbitron", sans-serif;
+}
+
 .jumbotron {
   padding-top: 7rem;
   background-color: #e2edff;
@@ -58,50 +62,49 @@ section {
 }
 
 .keyboard-box:hover::after {
- 
   opacity: 0.2;
 }
 
 .keyboard-name {
-    position: absolute;
-    top: 0;
-    width: 100%;
-    color: #fff;
-    text-align: center;
-    font-size: 2em;
-    opacity: 0;
-    transform: translate3d(0,0, 50px);
-    transition: 0,2s;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  color: #fff;
+  text-align: center;
+  font-size: 2em;
+  opacity: 0;
+  transform: translate3d(0, 0, 50px);
+  transition: 0, 2s;
 }
 
 .keyboard-box:hover .keyboard-name {
-    top: 20px;
-    opacity: 1;
+  top: 20px;
+  opacity: 1;
 }
 
 .Keyboard-detail-button {
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform: translate3d(-50%, 0, 100px);
-    opacity: 0;
-    transition: 0.5s;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translate3d(-50%, 0, 100px);
+  opacity: 0;
+  transition: 0.5s;
 }
 
 .keyboard-box:hover .Keyboard-detail-button {
-    opacity: 1;
-    bottom: 20px;
+  opacity: 1;
+  bottom: 20px;
 }
 
 .keyboard-img {
-    position: absolute;
-    top: 52%;
-    left: 50%;
-    transform: translate3d(-50%, -52%, 80px);
-    max-width: 300px;
-    transition: 0.5s;
+  position: absolute;
+  top: 52%;
+  left: 50%;
+  transform: translate3d(-50%, -52%, 80px);
+  max-width: 300px;
+  transition: 0.5s;
 }
 
 .keyboard-box:hover .keyboard-img {
-    transform: translate3d(-50%, -52%, 100px) rotate(-5deg) scale(1.2);
+  transform: translate3d(-50%, -52%, 100px) rotate(-5deg) scale(1.2);
 }
