--- a/style.css
+++ b/style.css
@@ -108,3 +108,48 @@ section {
 .keyboard-box:hover .keyboard-img {
   transform: translate3d(-50%, -52%, 100px) rotate(-5deg) scale(1.2);
 }
+
+
+.social-btns a {
+  text-decoration: none;
+  display: inline-block;
+  margin: 0 10px;
+  perspective: 200px;
+}
+.social-btns .box {
+  --box-size: 50px;
+  display: block;
+  height: var(--box-size);
+  width: var(--box-size);
+  position: relative;
+  transform-style: preserve-3d;
+  transform: translatez(calc(var(--box-size) / 2));
+  pointer-events: none;
+  transition: transform 0.5s ease;
+}
+
+.social-btns a:hover .box{
+    transform: translatez(calc(var(--box-size) / 2)) rotateX(90deg);
+}
+
+.social-btns .face {
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.social-btns .front {
+  background-color: #ffffff;
+  color: hsl(240, 6%, 16%);
+  transform: translateZ(calc(var(--box-size) / 2));
+}
+
+.social-btns .bottom {
+  background-color: hsl(322, 75%, 55%);
+  color: hsl(0, 0%, 97%);
+  transform: translateY(50%) rotateX(-90deg);
+}
